--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -27,7 +27,7 @@
   <!-- content -->
   <div class="container mt-3 mb-3 ml-5">
     <%- include("../partials/flash.ejs") %> 
-    <h1>Roadside Assistance</h1>
+    <h1>On Road Assistance</h1>
     <br>
     <h3>Rider: </h3>
     <ul>
