--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -21,7 +21,7 @@
       }
     </style>
   </head>
-<body class="text-black">
+<body>
   <!-- navbar -->
   <%- include("../partials/mainNavbar.ejs") %> 
   <!-- content -->
