--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -21,11 +21,11 @@
       }
     </style>
   </head>
-<body>
+<body class="bg text-white">
   <!-- navbar -->
   <%- include("../partials/mainNavbar.ejs") %> 
   <!-- content -->
-  <div class="container mt-3 mb-3 ml-5 bg">
+  <div class="container mt-3 mb-3 ml-5">
     <%- include("../partials/flash.ejs") %> 
     <h1>On Road Assistance</h1>
     <br>
