--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -44,7 +44,7 @@
 <!-- search location with api -->
 <!-- <a href="http://maps.googleapis.com/maps/api/geocode/json?latlng=23.1648581,79.9510421&sensor=true&key=AIzaSyCrUrHcMRPUMB-oTvegRh-KYmbtATHcDyo">test</a> -->
 <!-- 
-<p>Click the button to get your coordinates.</p>
+<p>Click the button to get your coordinates..</p>
 
 <button onclick="getLocation()">Try It</button>
 
