--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -27,6 +27,7 @@
   <!-- content -->
   <div class="container mt-3 mb-3 ml-5">
     <%- include("../partials/flash.ejs") %> 
+    <h1>On Road Assistance</h1>
   </div>
 <!-- search location with api -->
 <!-- <a href="http://maps.googleapis.com/maps/api/geocode/json?latlng=23.1648581,79.9510421&sensor=true&key=AIzaSyCrUrHcMRPUMB-oTvegRh-KYmbtATHcDyo">test</a> -->
