--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,7 +13,7 @@ body,html{
 .bg{
 /*     background-image: url('https://images.pexels.com/photos/2680270/pexels-photo-2680270.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500') ; */
     /* Full height */
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVEmRTZIP7hpfOzsTqu0a3aSdx9XGNzipCoQ&usqp=CAU');
+    background-image: url('https://mascarrecovery.com/wp-content/uploads/2019/08/roadside_assistance.jpg');
     height: 100%;
     /* 1366px * 225px screen size */
     /* Center and scale the image nicely */
